Update Dockerfile and entrypoint.